--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -1,6 +1,12 @@
 .testimonial {
   background-color: rgba(255,255,255,.8);
-  padding: 0 1.8125rem 1px 1.8125rem;
+  padding: 0 18px 1px 18px;
+  margin-bottom: 98px;
+
+  @mixin atLarge {
+    padding: 0 1.8125rem 1px 1.8125rem;
+    margin-bottom: 0;
+  }
 
   &__photo {
     border-radius: 50%;
@@ -27,5 +33,9 @@
     font-weight: 400;
     font-size: 0.9375rem;
     margin: .25rem 0 1rem 0.
+  }
+
+  &--last {
+    margin-bottom: 0;
   }
 }
