--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -15,6 +15,11 @@ $mainBlue: #2f5572;
     left: 0;
     width: 100%;
     text-align: center;
+    padding-top: 88px;
+
+    @mixin atMedium {
+      padding-top: 60px;
+    }
   }
 
   &__title {
